<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Flight Tracker</string>
    <string name="AppHeader">We are making travel easy</string>
    <string name="schedule_flights">Flights\nSchedule</string>
    <string name="schedule_flights_no_newline">Flights Schedule</string>
    <string name="countrycode_newline">Country\nCode</string>
    <string name="nearestairport">Near By Airports</string>
    <string name="searchflight">Search Flight</string>
    <string name="searchairport">Search Airport</string>
    <string name="todo">todo</string>
    <string name="no_data_found">No Data Found</string>
    <string name="flightdetails">Flight Details</string>
    <string name="title_activity_airport_details">AirportDetailsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="airportInfo">Airport Information</string>
    <string name="search_country_code">Search Country Code</string>


    <string name="t1">We Are Making Travel Easy</string>
    <string name="realtime_flights">Realtime Flights</string>
    <string name="schedule">Schedule</string>
    <string name="airline_routes">Airline Routes</string>
    <string name="quick_access_worldwide">Quick Access Worldwide</string>
    <string name="flight_status">Flight Status</string>
    <string name="airline_route">Airline Routes</string>
    <string name="information">Information</string>
    <string name="airportinfo">Airport\nInformation</string>
    <string name="airlineinfo">Airline\nInformation</string>
    <string name="cityinfo">City\nInformation</string>
    <string name="countrycode">Country Code</string>
    <string name="airlinefleet">Airline Fleet\nInformation</string>
    <string name="airlinetax">Airline Tax</string>
    <string name="timezone">TimeZone</string>
    <string name="sp1">Track Your Flight\nFrom Wherever You Are!</string>
    <string name="sp2">See Plans And Track their Routes All Over The World.</string>
    <string name="live_flight_tracker">LIVE FLIGHT TRACKER</string>
    <string name="track_any_flight_in_the_world">Track Any Flight In the World</string>
    <string name="track_your_flight_routs_flight_number_and_airline">Track Your Flight Routs, Flight Number and Airline</string>
    <string name="detailed_departure_and_arrival_information">Detailed Departure and Arrival Information</string>
    <string name="get_all_airline_related_information">Get All Airline Related Information</string>
    <string name="by_clicking_on_let_s_start_you_agree_to_our">By Clicking On Let’s Start You Agree to Our</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="let_s_start">Lets Start</string>


    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="appopen_ads">ca-app-pub-3940256099942544/3419835294</string>
    <string name="splash_ads1">ca-app-pub-3940256099942544/1033173712</string>
    <string name="splash_ads2">ca-app-pub-3940256099942544/1033173712</string>
    <string name="splash_ads3">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ads1">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ads2">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ads3">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ads1">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_ads2">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_ads3">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_ads1">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_ads2">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_ads3">ca-app-pub-3940256099942544/2247696110</string>
    <string name="reward_ads1">ca-app-pub-3940256099942544/5224354917</string>
    <string name="reward_ads2">ca-app-pub-3940256099942544/5224354917</string>
    <string name="reward_ads3">ca-app-pub-3940256099942544/5224354917</string>
    <string name="check_your_network_connection">Check Your Network Connection</string>
    <string name="search_airport">search airport</string>
    <string name="near_by_airports">near by airport</string>
    <string name="search_flight">Search Flight</string>
    <string name="search_airline">Search Airline</string>
    <string name="realtime_flight">Realtime Flight</string>
    <string name="instruction_for_realtime">Ex:IndIGO(Flight_iata=6E6065) here (6E)is airline iata_code and rest number are flight number.</string>
    <string name="enter_departure">Please enter the departure airport</string>
    <string name="enter_destination">Please enter the destination airport</string>
    <string name="enter_date">Please enter the date</string>
    <string name="airline_details">Airline Details</string>
    <string name="airline_fleet">Airline Fleet</string>
    <string name="airline_fleet_details">Airline Fleet Details</string>
    <string name="enter_airline_iata">Please enter the airline iata code.</string>
    <string name="airline_info">Airline Information</string>
    <string name="enter_airportcode">Please enter the airport code.</string>
    <string name="enter_airport_distance">Please enter the airport code.</string>
    <string name="city_info">City Details Information</string>
    <string name="enter_citycode">Please enter the citycode.</string>
    <string name="enter_countrycode">Please enter the country code.</string>
    <string name="country_code_details">Country Code Details</string>
    <string name="enter_flight_iatacode">Please enter the flight iata code.</string>
    <string name="Flight_list">Flight list</string>
    <string name="realtime_flight_details">Realtime Flight Details</string>
</resources>