<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c1"
        tools:context=".activity.StartActivity">


        <ImageView
            android:id="@+id/iv_bg"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_bgedge"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/ivtop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-110dp"
            android:src="@drawable/ic_flight_booking_cuate_1"
            android:layout_above="@+id/iv_bg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="110dp"
            android:layout_below="@+id/ivtop"
            android:layout_above="@+id/llbottom">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/live_flight_tracker"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:fontFamily="@font/khulabold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="•  "
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/track_any_flight_in_the_world"
                        android:textSize="14sp"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="•  "
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/track_your_flight_routs_flight_number_and_airline"
                        android:textSize="14sp"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="•  "
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/detailed_departure_and_arrival_information"
                        android:textSize="14sp"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="•  "
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/get_all_airline_related_information"
                        android:textSize="14sp"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llbottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/by_clicking_on_let_s_start_you_agree_to_our"
                android:textSize="16sp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:text="@string/privacy_policy"
                android:textSize="16sp"
                android:textColor="#37474F" />
            <TextView
                android:id="@+id/tv_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="80dp"
                android:paddingVertical="8dp"
                android:gravity="center"
                android:text="@string/let_s_start"
                android:textSize="16sp"
                android:textColor="@color/maincolor"
                android:background="@drawable/main_bg"
                android:backgroundTint="@color/white"/>
        </LinearLayout>

    </RelativeLayout>
</layout>
